--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title> CH38 </title>
 	</head>
 	<body>
-		<h1> Hola, CH38. Éste es mi primer deploy </h1>
+		<h1> Hola, CH38. Ya casi nos vamos </h1>
+		<button> Haz clic </button>
 	</body>
 </html>
